--- a/app/src/main/res/layout/activity_operator_home.xml
+++ b/app/src/main/res/layout/activity_operator_home.xml
@@ -28,4 +28,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <Button
+        android:id="@+id/btnScanQR"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Scan Booking QR Code"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/tvOperatorEmail"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
