--- a/app/src/main/res/layout/activity_operator_home.xml
+++ b/app/src/main/res/layout/activity_operator_home.xml
@@ -4,38 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:background="#051238"
+    android:padding="24dp"
     tools:context=".activities.OperatorHomeActivity">
 
     <TextView
         android:id="@+id/tvWelcomeOperator"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="112dp"
         android:text="Welcome Station Operator!"
+        android:textColor="#FFFFFF"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/tvOperatorEmail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Email: "
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tvWelcomeOperator"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnScanQR"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#ff7600"
         android:text="Scan Booking QR Code"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/tvOperatorEmail"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/tvOperatorEmail" />
+
+    <TextView
+        android:id="@+id/tvOperatorEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Email: "
+        android:textColor="#0191fe"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvWelcomeOperator" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
