--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:background="#051238"
+    android:padding="24dp"
     tools:context=".activities.RegisterActivity">
 
 
@@ -13,26 +14,38 @@
         android:id="@+id/etUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:backgroundTint="#0191fe"
         android:hint="Username"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#88FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#0191fe"
         android:hint="Email"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/etUsername"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#88FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/etUsername" />
 
     <EditText
         android:id="@+id/etFirstName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="First Name"
+        android:backgroundTint="#0191fe"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#88FFFFFF"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/etEmail"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +56,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Last Name"
+        android:backgroundTint="#0191fe"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#88FFFFFF"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/etFirstName"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +70,9 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:inputType="textPassword"
+        android:backgroundTint="#0191fe"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#88FFFFFF"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/etLastName"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,6 +83,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="NIC"
+        android:backgroundTint="#0191fe"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#88FFFFFF"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/etPassword"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +97,9 @@
         android:layout_height="wrap_content"
         android:hint="Phone"
         android:inputType="phone"
+        android:backgroundTint="#0191fe"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#88FFFFFF"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/etNic"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,12 +107,15 @@
 
     <Button
         android:id="@+id/btnRegister"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="#ff7600"
         android:text="Create Account"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/etPhone"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/etPhone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
