Update color palette and booking-related strings
Added a new red color to colors.xml. Updated several booking-related strings for brevity and clarity, and added new strings for QR code instructions, booking summaries, and reservation statuses in strings.xml.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="dark_blue">#051238</color>
     <color name="light_blue">#0191fe</color>
     <color name="orange">#ff7600</color>
+    <color name="red">#D50000</color>
 </resources>
