--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_blue">#051238</color>
+    <color name="light_blue">#0191fe</color>
+    <color name="orange">#ff7600</color>
+    <color name="red">#D50000</color>
+
 </resources>
