--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -4,5 +4,5 @@
     <corners android:radius="16dp" />
     <padding android:left="16dp" android:top="16dp"
         android:right="16dp" android:bottom="16dp"/>
-    <stroke android:width="1dp" android:color="@color/white" />
+    <stroke android:width="1dp" android:color="@color/light_blue" />
 </shape>
