--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFFFF"/> <!-- Background color -->
+    <solid android:color="@android:color/white"/> <!-- White background -->
     <stroke
-        android:width="1dp"
-        android:color="#CCCCCC"/> <!-- Border color -->
-    <corners android:radius="4dp"/> <!-- Rounded corners radius -->
+        android:width="2dp"
+        android:color="@color/light_blue"/> <!-- Light blue border -->
+    <corners android:radius="8dp"/>
     <padding
-        android:left="10dp"
-        android:top="10dp"
-        android:right="10dp"
-        android:bottom="10dp" />
+        android:left="12dp"
+        android:top="12dp"
+        android:right="12dp"
+        android:bottom="12dp" />
 </shape>
