--- a/app/src/main/res/drawable/user_profile.xml
+++ b/app/src/main/res/drawable/user_profile.xml
@@ -4,12 +4,24 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,2C6.477,2 2,6.477 2,12C2,17.523 6.477,22 12,22C17.523,22 22,17.523 22,12C22,6.477 17.523,2 12,2Z"
-      android:fillColor="#4296FF"/>
+      android:pathData="M12.12,12.78C12.05,12.77 11.96,12.77 11.88,12.78C10.12,12.72 8.72,11.28 8.72,9.51C8.72,7.7 10.18,6.23 12,6.23C13.81,6.23 15.28,7.7 15.28,9.51C15.27,11.28 13.88,12.72 12.12,12.78Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M12,6C10.343,6 9,7.343 9,9C9,10.657 10.343,12 12,12C13.657,12 15,10.657 15,9C15,7.343 13.657,6 12,6Z"
-      android:fillColor="#152C70"/>
+      android:pathData="M18.74,19.38C16.96,21.01 14.6,22 12,22C9.4,22 7.04,21.01 5.26,19.38C5.36,18.44 5.96,17.52 7.03,16.8C9.77,14.98 14.25,14.98 16.97,16.8C18.04,17.52 18.64,18.44 18.74,19.38Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M17.895,16.553C18.036,16.834 18.036,17.166 17.895,17.447C17.903,17.43 17.894,17.449 17.894,17.449L17.893,17.45L17.892,17.453L17.888,17.46L17.88,17.476C17.874,17.487 17.867,17.5 17.858,17.515C17.841,17.546 17.819,17.583 17.791,17.627C17.735,17.714 17.656,17.825 17.55,17.953C17.337,18.208 17.016,18.524 16.555,18.832C15.623,19.453 14.175,20 12,20C8.315,20 6.766,18.43 6.267,17.712C5.965,17.277 5.998,16.768 6.181,16.403C6.917,14.93 8.422,14 10.069,14H13.764C15.514,14 17.112,14.988 17.895,16.553Z"
-      android:fillColor="#152C70"/>
+      android:pathData="M12,22C17.523,22 22,17.523 22,12C22,6.477 17.523,2 12,2C6.477,2 2,6.477 2,12C2,17.523 6.477,22 12,22Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
 </vector>
