--- a/app/src/main/res/layout/dialog_booking_summary.xml
+++ b/app/src/main/res/layout/dialog_booking_summary.xml
@@ -26,6 +26,7 @@
         android:text="@string/station_id"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/dark_blue"
         android:paddingTop="6dp" />
 
     <!-- Date -->
@@ -35,6 +36,7 @@
         android:layout_height="wrap_content"
         android:text="@string/station_datetime"
         android:textSize="16sp"
+        android:textColor="@color/black"
         android:paddingTop="6dp" />
 
     <!-- Slots -->
@@ -44,6 +46,7 @@
         android:layout_height="wrap_content"
         android:text="@string/station_slot"
         android:textSize="16sp"
+        android:textColor="@color/black"
         android:paddingTop="6dp" />
 
     <!-- Buttons Row -->
