--- a/app/src/main/res/layout/item_reservation.xml
+++ b/app/src/main/res/layout/item_reservation.xml
@@ -87,7 +87,7 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/delete"
+                android:text="@string/cancel"
                 app:strokeColor="@color/red"
                 android:backgroundTint="@color/red"
                 android:textColor="@color/white"/>
