--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -7,6 +7,6 @@
     android:paddingHorizontal="12dp"
     android:paddingVertical="12dp"
     android:textSize="14sp"
-    android:textColor="@color/white" />
+    android:textColor="@color/dark_blue" />
 
 
