Add top app bar menu with logout for operator screens
Introduces a menu button in the top app bar for OperatorHomeActivity and OperatorBookingsActivity, allowing users to log out via a popup menu. Also adjusts text size and layout properties in activity_dashboard.xml and top_app_bar.xml for improved UI consistency.

--- a/app/src/main/res/layout/top_app_bar.xml
+++ b/app/src/main/res/layout/top_app_bar.xml
@@ -4,6 +4,7 @@
     android:id="@+id/topAppBar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     android:background="@color/orange"
     android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
     app:title="@string/app_name"
@@ -14,7 +15,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:paddingStart="16dp"
         android:paddingEnd="16dp">
