--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -92,9 +92,10 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/pending_count"
+                                    android:minLines="2"
                                     android:textColor="@color/dark_blue"
                                     android:textStyle="bold"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:gravity="center"/>
 
                                 <TextView
@@ -133,7 +134,7 @@
                                     android:text="@string/confirmed_count"
                                     android:textColor="@color/orange"
                                     android:textStyle="bold"
-                                    android:textSize="20sp"
+                                    android:textSize="16sp"
                                     android:gravity="center"/>
 
                                 <TextView
